--- a/ani.html
+++ b/ani.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex animation</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./file.css">
 </head>
 <body>
@@ -51,7 +52,7 @@
 
     <!-- <div></div> -->
 
-    <div class="container">
+    <!-- <div class="container">
         <div class="bubbles">
             <span style="--i:11;"></span>
             <span style="--i:12;"></span>
@@ -114,6 +115,47 @@
             <span style="--i:13;"></span>
             <span style="--i:28;"></span>
         </div>
+    </div> -->
+
+    <!-- <h2>
+        <span style="--i:1;">H</span>
+        <span style="--i:2;">a</span>
+        <span style="--i:3;">P</span>
+        <span style="--i:4;">p</span>
+        <span style="--i:5;">y</span>
+        <span style="--i:6; margin-left: 5vw;">D</span>
+        <span style="--i:7;">i</span>
+        <span style="--i:8;">w</span>
+        <span style="--i:9;">a</span>
+        <span style="--i:10;">l</span>
+        <span style="--i:11;">i</span> 
+    </h2> -->
+<!-- 
+    <div class="moon"></div> -->
+
+
+
+    <div class="wrapper">
+        <a href="#" class="button">
+            <span class="icon"><i class="fa-brands fa-facebook"></i></span>
+            <span class="title">Facebook</span>
+        </a>
+
+        <a href="#" class="button">
+            <span class="icon"><i class="fa-brands fa-x-twitter"></i></span>
+            <span class="title">twitter</span>
+        </a>
+
+        <a href="#" class="button">
+            <span class="icon"><i class="fa-brands fa-instagram"></i></span>
+            <span class="title">instagram</span>
+        </a>
+
+        <a href="#" class="button">
+            <span class="icon"><i class="fa-brands fa-youtube"></i></span>
+            <span class="title">youtube</span>
+        </a>
     </div>
+
 </body>
 </html>
